# hyperx-cloud-flight

./: 99-hyperx-cloud-flight.rules  Cargo.toml  Dockerfile  LICENSE.md  README.md  app.py  cloud_flight.py  cloud_flight.sh  install.sh  main.py  requirements.txt
.github/workflows/: release.yml
debian/: changelog  control  rules
src/: cli.rs  cloud_flight.rs  main.rs  tray.rs
