[package]
name = "cloud-flight"
version = "0.1.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.3.5"
ksni = "0.2.0"
log = { version = "0.4", features = ["max_level_info", "release_max_level_info"] }
hidapi = { version = "1.2.6", default-features = false, features = ["linux-shared-hidraw"] }
simple_logger = "1.13.0"

[[bin]]
name = "cloud-flight"
path = "src/main.rs"

[[bin]]
name = "cloud-flight-cli"
path = "src/cli.rs"
